# AGENTS

code_reviewer_agent/: README.md  pyproject.toml
code_reviewer_agent/output/: file_inventory.md  final_code_review_report.md  performance_report.md  security_report.md  static_analysis_report.md
code_reviewer_agent/src/code_reviewer_agent/: crew.py  main.py
code_reviewer_agent/src/code_reviewer_agent/config/: agents.yaml  tasks.yaml
code_reviewer_agent/src/code_reviewer_agent/tools/: code_analysis_tools.py
code_reviewer_agent/tests/: test_gemini.py  test_gemini_1_5.py
latest_ai_development_crew/: app.py  crewai_agent.py  pyproject.toml  requirements.txt
latest_ai_development_crew/.streamlit/: config.toml  secrets.toml
latest_ai_development_crew/app/: app.py  patch_chromadb.py  requirements.txt  runner.py
latest_ai_development_crew/output/: AI_20250819_190528.md  Agentic Ai_20250819_213738.md  Agentic Ai_20250820_085027.md  Agentic Ai_20250820_090448.md  Agentic Ai_20250820_092455.md  Agentic Ai_20250820_093314.md  LLMs_20250819_184707.md  Latest trends in Agentic AI_20250820_095316.md  Plant Leaf Disease Detection_20250819_184810.md  agentic ai_20250820_094855.md  report.md
latest_ai_development_crew/src/latest_ai_development_crew/: crew.py  main.py
latest_ai_development_crew/src/latest_ai_development_crew/config/: agents.yaml  tasks.yaml
my_agent/: pyproject.toml
my_agent/src/my_agent/: crew.py  main.py
