[project]
name = "code_reviewer_agent"
version = "0.1.0"
description = "code_reviewer_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.102.0",
    "pylint>=3.0.0",
    "bandit>=1.7.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "radon>=6.0.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0"
]

[project.scripts]
code_reviewer_agent = "code_reviewer_agent.main:run"
run_crew = "code_reviewer_agent.main:run"
train = "code_reviewer_agent.main:train"
replay = "code_reviewer_agent.main:replay"
test = "code_reviewer_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
