[project]
name = "latest_ai_development_crew"
version = "0.1.0"
description = "latest_ai_development_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
latest_ai_development_crew = "latest_ai_development_crew.main:run"
run_crew = "latest_ai_development_crew.main:run"
train = "latest_ai_development_crew.main:train"
replay = "latest_ai_development_crew.main:replay"
test = "latest_ai_development_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/latest_ai_development_crew"]